@@ -105,8 +105,6 @@ bool CGUIWindowVideoGenre::GetDirectory(const CStdString &strDirectory, CFileIte
       {
         // mark watched movies when showing all
         CStdString strTitle = movie.m_strTitle;
-        if (m_iShowMode == VIDEO_SHOW_ALL && movie.m_bWatched == true)
-          strTitle += " [W]";
         CFileItem *pItem = new CFileItem(strTitle);
         pItem->m_strTitle=strTitle;
         pItem->m_strPath = movie.m_strSearchString;
@@ -119,6 +117,8 @@ bool CGUIWindowVideoGenre::GetDirectory(const CStdString &strDirectory, CFileIte
           pItem->SetThumbnailImage(strThumb);
         pItem->m_fRating = movie.m_fRating;
         pItem->m_stTime.wYear = movie.m_iYear;
+        if (!movie.m_bWatched)
+          pItem->SetOverlayImage(CGUIListItem::ICON_OVERLAY_UNWATCHED);
         items.Add(pItem);
       }
     }
