@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 26-02-2006 added: overlay to indicate that a movie is unwatched in database views (overlayunwatched.png).
  - 26-02-2006 fixed: xbmsp:// -> xbms:// in the network source dialog.
  - 26-02-2006 fixed: Default interlaced and output to all speakers settings weren't saved.
  - 26-02-2006 fixed: Buttonscroller shadow and text colours didn't allow alpha values.
